@@ -58,6 +58,9 @@ Library
 - Issue #17526: fix an IndexError raised while passing code without filename to
   inspect.findsource().  Initial patch by Tyler Doyle.
 
+- Issue #16550: Update the opcode descriptions of pickletools to use unsigned
+  integers where appropriate.  Initial patch by Serhiy Storchaka.
+
 IDLE
 ----
 
